k8s/ingress-service.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  # adds additional capacity
  annotations:
    # specify which class to use
    kubernetes.io/ingress.class: nginx
    # how actual copy of nginx behaves, here we are stripping off of paths e.g./api
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - http:
        paths:
        # define the paths and redirect them
          - path: /
            backend:
              # name of service
              serviceName: client-cluster-ip-service
              servicePort: 3000
          - path: /api
            backend:
              serviceName: server-cluster-ip-service
              servicePort: 5000
